--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -20,6 +29,7 @@
   flex-direction: column;
   justify-content: space-around;
   margin-bottom: 100px;
+  overflow: hidden;
 }
 
 .logo {
@@ -60,6 +70,11 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.header__link:hover {
+  opacity: 0.5;
 }
 
 .header__main-illustration {
@@ -80,12 +95,12 @@
   position: absolute;
   top: 64px;
   right: 0;
+  animation: rotation 20s linear infinite;
 }
 
 .description {
   display: flex;
   justify-content: center;
-  margin: 0 auto 100px;
 }
 
 .two-columns {
@@ -125,6 +140,86 @@
   margin-bottom: 0;
 }
 
+.techniques {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.cards {
+  width: 920px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.cards__item {
+  width: 240px;
+  display: flex;
+  flex-flow: column wrap;
+  list-style-type: none;
+  margin-top: 60px;
+  margin-right: 100px;
+}
+
+.cards__item:nth-child(3) {
+  margin-right: 0;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  margin: 0 40px 43px;
+}
+
+.cards__title {
+  text-align: center;
+  margin: 0 0 16px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.cards__description {
+  text-align: center;
+  margin: 0;
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.video {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: -60px;
+}
+
+.video__iframes {
+  display: flex;
+  justify-content: center;
+  margin: 50px auto 0;
+}
+
+.video__iframe {
+  width: 515px;
+  height: 316px;
+  margin-right: 20px;
+}
+
+.video__iframe:last-child {
+  margin: 0;
+}
+
+.oakley {
+  display: flex;
+  justify-content: center;
+  background-color: #f2f2f2;
+  padding-top: 160px;
+}
+
 .digits {
   display: flex;
   flex-direction: column;
@@ -137,7 +232,7 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
-  margin: 0 auto 20px;
+  margin: 100px auto 20px;
   display: flex;
   justify-content: center;
 }
@@ -229,6 +324,84 @@
   position: absolute;
   top: 50%;
   right: 48px;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.feynman__link:hover {
+  opacity: 0.5;
+}
+
+.khan {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.khan__container {
+  width: 80%;
+  margin: 105px auto 0;
+}
+
+.khan__author {
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.khan__title {
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  margin: 0 0 50px;
+}
+
+.khan__quote {
+  width: 790px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 0 36px;
+}
+
+.khan__quote-author {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0 0 10px;
+}
+
+.khan__quote-author-subline {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 0 68px;
+}
+
+.khan__book-container {
+  display: flex;
+  overflow: hidden;
+}
+
+.khan__book-pic {
+  width: 620px;
+  height: 608px;
+  margin-right: 48px;
+  object-fit: cover;
+  object-position: top;
+}
+
+.khan__buy-link {
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.khan__buy-link:hover {
+  opacity: 0.5;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -271,7 +444,36 @@
   top: 0;
   right: -210px;
   z-index: 1;
+  animation: rotation 20s linear infinite;
 }
+
+.resources {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.resources__logo-zone {
+  width: 1100px;
+  display: flex;
+  justify-content: center;
+  margin: 80px auto 217px;
+}
+
+.resources__link {
+  display: flex;
+  justify-content: center;
+  width: 270px;
+  height: 38px;
+  text-decoration: none;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.resources__link:hover {
+  opacity: 0.5;
+}
+
+.resources__logo {}
 
 .footer {
   display: flex;
@@ -326,10 +528,15 @@
   text-decoration: none;
   color:#f2f2f2;
   margin-bottom: 10px;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .footer__column-link:last-child {
   margin-bottom: 0;
+}
+
+.footer__column-link:hover {
+  opacity: 0.5;
 }
 
 .footer__social-icon {
