--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -5,7 +5,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  background-image: url(/images/feynman.png);
+  background-image: url(../../images/feynman.png);
   background-repeat: no-repeat;
   background-position: bottom 0 left 0;
   background-color: #f2f2f2;
