--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,12 +1,10 @@
 .footer__column-link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
   text-decoration: none;
   color:#f2f2f2;
-  margin-bottom: 10px;
   transition: opacity 0.2s ease-in-out;
-}
-
-.footer__column-link:last-child {
-  margin-bottom: 0;
 }
 
 .footer__column-link:hover {
